--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.2.3",
+    "@react-spring/web": "^9.6.1",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.7.1",
     "@sanity/image-url": "^0.140.22",
